// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should HeaderMistakes render correctly With one one count 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Should HeaderMistakes render correctly With one zero count 1`] = `
<div
  className="game__mistakes"
/>
`;
